--- a/core/templates/core/about.html
+++ b/core/templates/core/about.html
@@ -42,38 +42,30 @@
                 <div class="col-lg-6">
                     <h2 class="noo-sh-title-top">¿PORQUE DONAR? <span></span></h2>
                     <p>"¡Bienvenido a nuestra tienda de mascotas! Estamos emocionados de presentarte nuestro programa de suscripción, donde no solo podrás disfrutar de increíbles descuentos en productos y servicios para tus adorables compañeros peludos, sino que también estarás contribuyendo directamente a una causa noble. Con cada suscripción, una parte de los ingresos se destinará a apoyar a una fundación dedicada al bienestar animal. Estamos comprometidos en hacer una diferencia en la vida de aquellos animales menos afortunados, brindándoles los cuidados, refugio y oportunidades que merecen. Al subscribirte, no solo estarás obteniendo beneficios económicos, sino que también estarás desempeñando un papel importante en la protección y el cuidado de los animales necesitados. ¡Únete a nuestra comunidad comprometida y ayúdanos a marcar la diferencia en el mundo de las mascotas!</p>
-					<a class="btn hvr-hover" href="{% url 'checkout' %}">DONAR</a>
                 </div>
             </div>
             <div class="row my-5">
-                <div class="col-sm-6 col-lg-4">
+                <div class="col-sm-6 col-lg-6">
                     <div class="service-block-inner">
-                        <h3>Somos Confiables</h3>
+                        <h3>Subscripcion</h3>
                         <p>
-                            Tus donaciones van dirigidas a nuestra fundacion encargada de cuidar a los animalitos!!
+                            Al hacer una donacion en nuestra pagina te convertiras automaticamente en subscriptor, esto quiere decir que recibiras descuentos y ofertas especiales. y todo esto gracias a tu ayuda!
                         </p>
                     </div>
                 </div>
-                <div class="col-sm-6 col-lg-4">
+                <div class="col-sm-6 col-lg-6">
                     <div class="service-block-inner">
-                        <h3>Somos un equipo</h3>
+                        <h3>
+                            Si estas dispuesto a ser subscriptor y donar aqui tienes!
+                        </h3>
                         <p>
-                            junto a ti y nuestro equipo continuamos mejorando dia a dia
-                        </p>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-lg-4">
-                    <div class="service-block-inner">
-                        <h3>Somos expertos</h3>
-                        <p>
-                            Nos centramos en mejorar tu experiencia dia a dia en nuestra pagina.
+                            <a class="btn hvr-hover" href="{% url 'subscripcion' %}">DONAR</a>
                         </p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    
     <!-- End About Page -->
 
 
