--- a/core/templates/core/my-account.html
+++ b/core/templates/core/my-account.html
@@ -40,7 +40,7 @@
                         <div class="account-box">
                             <div class="service-box">
                                 <div class="service-icon">
-                                    <a href="{% url 'about' %}"> <i class="fa fa-gift"></i> </a>
+                                    <a href="{% url 'status' %}"> <i class="fa fa-gift"></i> </a>
                                 </div>
                                 <div class="service-desc">
                                     <h4>Subscripcion</h4>
@@ -53,7 +53,7 @@
                         <div class="account-box">
                             <div class="service-box">
                                 <div class="service-icon">
-                                    <a href="#"><i class="fa fa-lock"></i> </a>
+                                    <a href="{% url 'usuario' %}"><i class="fa fa-lock"></i> </a>
                                 </div>
                                 <div class="service-desc">
                                     <h4>Login &amp; security</h4>
