--- a/core/templates/core/productos.html
+++ b/core/templates/core/productos.html
@@ -92,7 +92,7 @@
                         </div>
                         <div class="list-group list-group-collapse list-group-sm list-group-tree" id="list-group-men" data-children=".sub-men">
                             <p>15% de descuento para usuarios subscriptores</p>
-                            <a class="btn hvr-hover" href="{% url 'subscripcion' %}" readonly style="border:0; color:#FFFFFF; font-weight:bold;">Subscribete ahora!!</a>
+                            <a class="btn hvr-hover" href="{% url 'about' %}" readonly style="border:0; color:#FFFFFF; font-weight:bold;">Subscribete ahora!!</a>
                         </div>
                     </div>
                     <div class="filter-price-left">
