--- a/core/templates/core/checkout.html
+++ b/core/templates/core/checkout.html
@@ -2,6 +2,8 @@
 
 {% load static %}
 
+{% load crispy_forms_tags %}
+
 {% block contenido %}
 
 <!-- Start Cart  -->
@@ -18,95 +20,19 @@
                         <h3>Datos Personales</h3>
                     </div>
                     <form class="needs-validation" novalidate>
-                        <div class="row">
-                            <div class="col-md-6 mb-3">
-                                <label for="firstName">Primer Nombre *</label>
-                                <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
-                                <div class="invalid-feedback"> Se require validar el primer nombre *</div>
-                            </div>
-                            <div class="col-md-6 mb-3">
-                                <label for="lastName">Apellido *</label>
-                                <input type="text" class="form-control" id="lastName" placeholder="" value="" required>
-                                <div class="invalid-feedback"> Se require validar el apellido *</div>
-                            </div>
-                        </div>
-                        <div class="mb-3">
-                            <label for="email">Correo electronico *</label>
-                            <input type="email" class="form-control" id="email" placeholder="">
-                            <div class="invalid-feedback"> Porfavor valida tu correo electronico </div>
-                        </div>
-                        <div class="mb-3">
-                            <label for="address">Direccion *</label>
-                            <input type="text" class="form-control" id="address" placeholder="" required>
-                            <div class="invalid-feedback"> Ingresa tu direccion </div>
-                        </div>
-                        <div class="mb-3">
-                            <label for="address2">Direccion 2 *</label>
-                            <input type="text" class="form-control" id="address2" placeholder=""> 
-                        </div>
-                        <hr class="mb-4">
-
-                        
-                        <div class="row">
-                            <div class="col-md-6 mb-3">
-                                <label for="cc-name">Nombre de la tarjeta</label>
-                                <input type="text" class="form-control" id="cc-name" placeholder="" required> <small class="text-muted">Nombre completo que figura en la tarjeta</small>
-                                <div class="invalid-feedback"> El nombre en la tarjeta es obligatorio </div>
-                            </div>
-                            <div class="col-md-6 mb-3">
-                                <label for="cc-number">Numero de la tarjeta</label>
-                                <input type="text" class="form-control" id="cc-number" placeholder="" required>
-                                <div class="invalid-feedback"> Se requiere en numero de la tarjeta </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-3 mb-3">
-                                <label for="cc-expiration">Expiracion</label>
-                                <input type="text" class="form-control" id="cc-expiration" placeholder="" required>
-                                <div class="invalid-feedback"> Se requiere fecha de expiracion </div>
-                            </div>
-                            <div class="col-md-3 mb-3">
-                                <label for="cc-expiration">CVV</label>
-                                <input type="text" class="form-control" id="cc-cvv" placeholder="" required>
-                                <div class="invalid-feedback"> Se requiere codigo de seguridad </div>
-                            </div>
-                            
-                            <div class="col-md-6 mb-3">
-                                <div class="payment-icon">
-                                    <ul>
-                                        <li><img class="img-fluid" src="images/payment-icon/1.png" alt=""></li>
-                                        <li><img class="img-fluid" src="images/payment-icon/2.png" alt=""></li>
-                                        <li><img class="img-fluid" src="images/payment-icon/3.png" alt=""></li>
-                                        <li><img class="img-fluid" src="images/payment-icon/5.png" alt=""></li>
-                                        <li><img class="img-fluid" src="images/payment-icon/7.png" alt=""></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    <hr class="mb-1"> </form>
+                        <form method="POST" enctype="multipart/form-data" id="form">
+                            {% csrf_token %}
+                            <table >
+                                {{ form | crispy}}
+                            </table>
+                        </form>                      
+                    </form>
                 </div>
             </div>
             <div class="col-sm-6 col-lg-6 mb-3">
                 <div class="row">
                     <div class="col-md-12 col-lg-12">
-                        <div class="odr-box">
-                            <div class="title-left">
-                                <h3>Carrito de compras</h3>
-                            </div>
-                            <div class="rounded p-2 bg-light">
-                                <div class="media mb-2 border-bottom">
-                                    <div class="media-body"> <a href="detail.html">{{value.nombre}}</a>
-                                        {% if value.cantidad < 2 %}
-                                        <div class="small text-muted">Precio: ${{value.precio}}<span class="mx-2">|
-                                        {% else  %}
-                                        <div class="small text-muted">Precio: ${{value.precio2}}<span class="mx-2">|
-                                        {% endif %}
-                                        Cantidad:</span>{{value.cantidad}}<span class="mx-2">| Subtotal: </span>{{importe_total_carro}}</div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                </div>
                 {% if request.session.carro.items %}
                     <div class="col-md-12 col-lg-12">
                         <div class="order-box">
@@ -123,26 +49,25 @@
                                 <div class="ml-auto font-weight-bold">${{descuento|floatformat:"2"}}</div>
                             </div>
                             <hr class="my-1">
-                            <div class="d-flex">
-                                <h4>Costo de envio</h4>
-                                <div class="ml-auto font-weight-bold"> Free </div>
-                            </div>
-                            <hr>
                             <div class="d-flex gr-total">
                                 <h5>Total</h5>
-                                <div class="ml-auto h5">${{importe_total_carro}}</div>
+                                <div class="ml-auto h5">${{totaldes}}</div>
+                            </div>
+                            <div class="d-flex gr-total">
+                                <h5>Total en dolares</h5>
+                                <div class="ml-auto h5">${{dolar}}</div>
                             </div>
                             <hr> </div>
                     </div>
-                {% else %}
                 {% endif %}
-                    <div class="col- d-flex shopping-box">
-                        <div id = "btnPaypal"></div>
-                    </div>
+                    <div class="col-sm-12 text-center">
+						<div id = "btnPaypal"></div>
+					</div>
                 </div>
             </div>
         </div>
     </div>
+</div>
 
 {% endblock %}
 <!-- End Cart -->
@@ -150,76 +75,63 @@
 {% block js %}
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="https://www.paypalobjects.com/api/checkout.js"></script>
+
+
 <script>
-    function validarFormulario() {
-    var formulario = document.getElementById('form'); // ID del formulario
-
-    if (formulario.checkValidity()) {
-        // El formulario es válido
-        return true;
-    } else {
-        // El formulario no es válido
-        formulario.reportValidity(); // Muestra los mensajes de validación nativos del navegador
-        return false;
-    }
-    }
-</script>
-
-
-
-	<script>
-		paypal.Button.render({
-			env: 'sandbox',
-			client: {
-				sandbox: 'Afkl4-gUYgFYYyRADItq-Ed5k26u51koPZJ-gEj_JQ0Eh7spquxj5TjlcyyEPkKtK1s3fvb9UPVpG6nH',
-				production: 'demo_production_client_id'
-			},
-			locale: 'es_CL',
-			style: {
-				size: 'large',
-				color: 'gold',
-				shape: 'rect'
-			},
-			commit: true,
-			payment: function (data, actions) {
+	paypal.Button.render({
+		env: 'sandbox',
+		client: {
+			sandbox: 'Afkl4-gUYgFYYyRADItq-Ed5k26u51koPZJ-gEj_JQ0Eh7spquxj5TjlcyyEPkKtK1s3fvb9UPVpG6nH',
+			production: 'demo_production_client_id'
+		},
+		locale: 'es_CL',
+		style: {
+			size: 'large',
+			color: 'gold',
+			shape: 'rect'
+		},
+		commit: true,
+			
+    payment: function (data, actions) {
+		
 				return actions.payment.create({
 					transactions: [{
 						amount: { 
-							total: '{{importe_total_carro}}', // EL TOTAL DEL CARRITO DE COMPRA
+							total: '{{dolar}}', // EL TOTAL DEL CARRITO DE COMPRA
 							currency: 'USD'
 						}
 					}]
-				});
-			},
-			onAuthorize: function (data, actions) {
-				return actions.payment.execute().then(function () {
-					// LA LOGICA DE LO QUE PASA LUEGO DEL PAGO	
-					var url = "{% url 'pedidos:procesar_pedido' %}"
-					window.location.href = url;
-				});
-			},
-			onCancel(data) {
-				Swal.fire({
-						title:'Cancelado',
-						text: 'Transacción cancelada!',
-						icon: 'error',
-						showCancelButton: false,
-						confirmButtonColor: '#3085d6',
-						cancelButtonColor: '#d33',
-						confirmButtonText: 'Confirmar'
-					})
-			},
-			onError(err) {
-				Swal.fire({
-						title:'Error',
-						text: 'Ha ocurrido un error con el pago',
-						icon: 'error',
-						showCancelButton: false,
-						confirmButtonColor: '#3085d6',
-						cancelButtonColor: '#d33',
-						confirmButtonText: 'Confirmar'
-					})
-			}
-		}, '#btnPaypal');
-	</script>
+				})	
+	},
+	onAuthorize: function (data, actions) {
+		return actions.payment.execute().then(function () {
+			// LA LOGICA DE LO QUE PASA LUEGO DEL PAGO	
+			var url = "{% url 'pedidos:procesar_pedido' %}"
+			window.location.href = url;
+		});
+	},
+	onCancel(data) {
+		Swal.fire({
+				title:'Cancelado',
+				text: 'Transacción cancelada!',
+				icon: 'error',
+				showCancelButton: false,
+				confirmButtonColor: '#3085d6',
+				cancelButtonColor: '#d33',
+				confirmButtonText: 'Confirmar'
+			})
+	},
+	onError(err) {
+		Swal.fire({
+				title:'Error',
+				text: 'Ha ocurrido un error con el pago',
+				icon: 'error',
+				showCancelButton: false,
+				confirmButtonColor: '#3085d6',
+				cancelButtonColor: '#d33',
+				confirmButtonText: 'Confirmar'
+			})
+	}
+	}, '#btnPaypal');
+</script>
 {% endblock %}
