--- a/core/templates/core/wishlist.html
+++ b/core/templates/core/wishlist.html
@@ -35,7 +35,6 @@
     <div class="wishlist-box-main">
         <div class="container">
             <div class="row">
-                
                 <div class="col-lg-12">
                     <div class="table-main table-responsive">
                         <table class="table">
@@ -43,44 +42,47 @@
                                 <tr>
                                     <th>Images</th>
                                     <th>Product Name</th>
-                                    <th>Unit Price </th>
+                                    <th>Unit Price</th>
                                     <th>Stock</th>
                                     <th>Add Item</th>
                                     <th>Remove</th>
                                 </tr>
-    
                             </thead>
                             <tbody>
+                                {% for item in wishlist_items %}
                                 <tr>
-                                    <td class="thumbnail-img">
-                                        <a href="#">
-									<img class="img-fluid" src="images/img-pro-01.jpg" alt="" />
-								</a>
+                                    <td class="image-pr">
+                                        <img src="{{ item.product.image.url }}" alt="{{ item.product.name }}">
                                     </td>
                                     <td class="name-pr">
-                                        <a href="#">
-									Lorem ipsum dolor sit amet
-								</a>
+                                        <a href="#">{{ item.product.name }}</a>
                                     </td>
                                     <td class="price-pr">
-                                        <p>$ 80.0</p>
+                                        <p>${{ item.product.price }}</p>
                                     </td>
-                                    <td class="quantity-box">In Stock</td>
+                                    <td class="quantity-box">
+                                        {% if item.product.stock > 0 %}
+                                            In Stock
+                                        {% else %}
+                                            Out of Stock
+                                        {% endif %}
+                                    </td>
                                     <td class="add-pr">
-                                        <a class="btn hvr-hover" href="#">Add to Cart</a>
+                                        <a class="btn hvr-hover" href="{% url 'cart:add' item.product.id %}">Add to Cart</a>
                                     </td>
                                     <td class="remove-pr">
-                                        <a href="#">
-									<i class="fas fa-times"></i>
-								</a>
+                                        <a href="{% url 'wishlist:remove' item.id %}">
+                                            <i class="fas fa-times"></i>
+                                        </a>
                                     </td>
+                                </tr>
+                                {% endfor %}
                             </tbody>
                         </table>    
                     </div>
                 </div>
-                
             </div>
         </div>
     </div>
 
-    {% endblock %}
+{% endblock %}
