--- a/core/templates/core/detallepedido.html
+++ b/core/templates/core/detallepedido.html
@@ -18,21 +18,26 @@
                             </tr>
                         </thead>
                         {% for aux in lineapedido %}
-                            
                             <tbody>
                                 <tr>
-                                    <td>{{aux.producto}}</td>
-                                    <td>{{aux.cantidad}}</td>
+                                    <td class="name-pr">
+                                        <a href="#">
+                                            {{aux.producto}}
+                                        </a>
+                                    </td>
+                                    <td class="name-pr">
+                                        <a href="#">
+                                            {{aux.cantidad}}
+                                        </a>
+                                    </td>
                                 </tr>
                             </tbody>
                            
                         {% endfor %}
                     </table>    
                 </div>
-                <div class="row">
-                    <div class="col-sm-12">
-                        <h1>Estado: {{pedido.estado}}</h1>
-                    </div>
+                <div class="container text-center mt-5">
+                    <h1 class="display-4">Estado: {{pedido.estado}}</h1>
                 </div>
             </div>
             
