--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -58,7 +58,7 @@
 				</div>
 				<div class="col-lg-6 col-md-6 col-sm-12">
 					<div class="offer-box-products">
-						<img class="img-fluid" src="{% static 'core/images/gatito.jpeg' %}" alt="" />
+						<img class="img-fluid" src="{% static 'core/images/gato.jpeg' %}" alt="" />
 					</div>
 				</div>
 			</div>
@@ -97,7 +97,6 @@
                             <div class="mask-icon">
                                 <ul>
                                     <li><a href="{% url 'productdetail' aux.id %}" data-toggle="tooltip" data-placement="right" title="Detalle"><i class="fas fa-eye"></i></a></li>
-                                    <li><a href="{% url 'wishlist' %}" data-toggle="tooltip" data-placement="right" title="Añadir a wishlist"><i class="far fa-heart"></i></a></li>
                                     {% if user.is_superuser %}
                                     <li><a href="{% url 'update' aux.id %}" data-toggle="tooltip" data-placement="right" title="Editar"><i class="fas fa-pen"></i></a></li>
                                     <li><a href="{% url 'delete' aux.id %}" data-toggle="tooltip" data-placement="right" title="Eliminar" ><i class="fas fa-trash"></i></a></li> 
