--- a/core/templates/core/detallepedido.html
+++ b/core/templates/core/detallepedido.html
@@ -10,7 +10,7 @@
             <div class="col-lg-12">
                 <div class="table-main table-responsive">
                     
-                    <table class="table" id="tablaUsuarios">
+                    <table class="table">
                         <thead>
                             <tr>
                                 <th>Producto</th>
