--- a/core/templates/core/gallery.html
+++ b/core/templates/core/gallery.html
@@ -26,7 +26,7 @@
             <div class="row">    
                 <div class="col-lg-12">
                     <div class="table-main table-responsive">
-                        <table class="table" id="tablaUsuarios">
+                        <table class="table">
                             <thead>
                                 <tr>
                                     <th>Id Pedido</th>
@@ -41,7 +41,7 @@
                                     <tr>
                                         <td class="name-pr">
                                             <a href="#">
-                                                {{aux.id}}
+                                                #{{aux.id}}
                                             </a>
                                         </td>
                                         <td class="name-pr">
@@ -54,7 +54,7 @@
                                                 {{aux.created_at|date:'d/m/Y'}}
                                             </a>
                                         </td>
-                                        <td><a class="btn hvr-hover" href="{% url 'detallepedido' aux.id %}" readonly style="border:0; color:#FFFFFF; font-weight:bold;">Detalle</a>
+                                        <td><a class="btn hvr-hover" href="{% url 'detallepedido' aux.id %}" readonly style="border:0; color:#FFFFFF; font-weight:bold;">Detalle Pedido</a>
                                         </td>
                                         
                                     </tr>
